# py-chess

./: LICENSE  README.md  pyproject.toml
py_chess/: main.py
